# mai-ir

./: .dockerignore  .gitignore  Dockerfile  README.md  REPORT.tex  config.yaml  crawler.py  db_manager.py  docker-compose.yml  export_documents.py  main.py  requirements.txt  test_category.py  test_category2.py  test_category3.py  test_category4.py
config/: config_bethesda.yaml  config_fallout_wiki.yaml  config_fandom.yaml
evaluation/: calculate_metrics.py  convert_ground_truth_to_urls.py  generate_ground_truth.py  metrics.py  queries_ground_truth.json  queries_ground_truth_urls.json
scripts/: check_stats.py  migrate_db.py  plot_zipf.py
search_engine/: CMakeLists.txt
search_engine/src/: data_structures.h  index_builder.cpp  index_builder.h  index_builder_main.cpp  main_cli.cpp  search_engine.cpp  search_engine.h  stemmer.cpp  stemmer.h  test_data_structures.cpp  test_stemmer.cpp  test_tokenizer.cpp  tokenizer.cpp  tokenizer.h  zipf_analysis.cpp  zipf_analysis.h
src/crawlers/: crawler.py  crawler_bethesda.py  main.py  main_bethesda.py
src/db/: db_manager.py
src/fetchers/: base_fetcher.py  fetcher_factory.py  playwright_fetcher.py  requests_fetcher.py
src/utils/: url_normalizer.py
web_service/: main.py
web_service/templates/: index.html  results.html
